# credit-control

./: README.md
account_credit_control/: README.rst
account_credit_control/i18n/: it.po
account_credit_control/models/: credit_control_communication.py  credit_control_line.py
account_credit_control/tests/: test_credit_control_run.py
account_credit_control/views/: credit_control_communication.xml  res_partner.xml
account_credit_control_attach_invoice/: README.rst  __manifest__.py
account_credit_control_attach_invoice/models/: report.py  res_company.py  res_config_settings.py
account_credit_control_attach_invoice/readme/: CONTRIBUTORS.md  DESCRIPTION.md  USAGE.md
account_credit_control_attach_invoice/tests/: test_ir_action_report.py
account_credit_control_attach_invoice/views/: res_config_settings.xml
account_invoice_overdue_reminder/: README.rst
account_invoice_overdue_reminder/i18n/: fr.po
account_invoice_overdue_reminder/views/: account_invoice_overdue_reminder.xml  account_move.xml  overdue_reminder_action.xml  overdue_reminder_result.xml  report_overdue_reminder.xml  res_partner.xml
account_invoice_overdue_reminder/wizard/: overdue_reminder_wizard_view.xml  res_config_settings_view.xml
account_invoice_overdue_warn/: README.rst
account_invoice_overdue_warn/models/: res_partner.py
account_invoice_overdue_warn/tests/: test_overdue_warn.py
account_invoice_overdue_warn_sale/: README.rst
partner_risk_insurance/: README.rst  __manifest__.py
sale_financial_risk_info/: README.rst
setup/_metapackage/: pyproject.toml
(+12 files in other folders)
