[project]
name = "odoo-addons-oca-credit-control"
version = "18.0.20250313.1"
dependencies = [
    "odoo-addon-account_financial_risk==18.0.*",
    "odoo-addon-account_invoice_overdue_warn==18.0.*",
    "odoo-addon-sale_financial_risk==18.0.*",
    "odoo-addon-sale_financial_risk_info==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
